wwr/styles/rafting.css
:root {
    --primary-color: blue;
    --accent1-color: #474b91;
    --heading-font: "Times New Roman", "Georgia", serif;
    --body-font: Arial, Helvetica, sans-serif;
}

* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

body {
    font-family: var(--body-font);
    color: var(--accent1-color);
}

header,
main,
footer {
    width: 840px;
    margin: 0 auto;
}

h1,
h2 {
    font-family: var(--heading-font);
    color: var(--primary-color);
}

nav,
p,
section,
article {
    margin: 16px;
    padding: 8px;
}

.socialmedia a {
    text-decoration: none;
}

.hero {
    position: relative;
}

.hero img {
    display: block;
    width: 100%;
    height: auto;
}

.hero article {
    position: absolute;
}

h1 {
    position: absolute;
    top: 20px;
    width: 100%;
    padding: 16px;
    text-align: center;
    opacity: 0.7;
    background-color: var(--accent1-color);
    color: honeydew;
}

.hero article img {
    float: right;
    width: 125px;
}

